# cube

./: Cargo.toml  README.md  shell.nix
src/: abstract_solvers.rs  algebraic_actions.rs  composite_move_table.rs  composite_pruning_table.rs  coord_cube.rs  coord_move_table.rs  coord_wing_edges.rs  cubie_orientations_and_ud_slice.rs  equivalence_class.rs  facelet_cube.rs  facelet_wing_edges.rs  flat_move_table.rs  flat_pruning_table.rs  ftl_minus_keyhole.rs  g1_coord_cube.rs  g1_coord_cube_compact.rs  invertable.rs  main.rs  move_sets.rs  move_table.rs  permutation_group.rs  pruning_table.rs  representative_table.rs  swap_parity.rs  table_traits.rs  tetrahedral_trapezoids.rs  three_trapezoids.rs  three_triangles.rs  three_triangles_stack.rs  translated_move_table.rs  translated_pruning_table.rs  two_by_two_by_three.rs  two_by_two_by_two.rs  two_lines.rs  two_triangles.rs  util.rs
src/coord_wing_edges/: locked_evens.rs  locked_ud_evens.rs  locked_ud_odds.rs  locked_ud_slice.rs  sorted_ud_evens.rs  sorted_ud_odds.rs  sorted_ud_slice.rs
src/coord_wing_edges/locked_evens/: top_six.rs  ud.rs  ud_slice.rs
src/symmetries/: cube.rs
src/three_trapezoids/: edge.rs  inner.rs  outer.rs
